--- a/1_animation/1_animation.html
+++ b/1_animation/1_animation.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation 1</title>
     <script src="./library/p5.min.js"></script>
+    <script src="./animation.js" defer></script>
 </head>
 
 <body>
 
-    <script src="./animation.js"></script>
 </body>
 
 </html>
