--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <iframe src="./1_animation/1_animation.html" width="500px" height="500px"></iframe>
+    <iframe src="./2_animation/2_animation.html" width="500px" height="500px"></iframe>
 </body>
 
 </html>
