--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <iframe src="./1_animation/1_animation.html" width="500px" height="500px"></iframe>
     <iframe src="./2_animation/2_animation.html" width="500px" height="500px"></iframe>
+    <iframe src="./3_animation/3_animation.html" width="500px" height="500px"></iframe>
 </body>
 
 </html>
