--- a/1_animation/1_animation.html
+++ b/1_animation/1_animation.html
@@ -7,6 +7,7 @@
     <title>Animation 1</title>
     <script src="./library/p5.min.js"></script>
     <script src="./animation.js" defer></script>
+    <link rel="stylesheet" href="./animation.css">
 </head>
 
 <body>
