--- a/2_animation/2_animation.html
+++ b/2_animation/2_animation.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation 2</title>
+    <link rel="stylesheet" href="./animation.css">
     <script src="./library/p5.min.js"></script>
     <script src="./animation.js" defer></script>
 </head>
