--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-    <iframe src="./1_animation/1_animation.html" width="500px" height="500px"></iframe>
-    <iframe src="./2_animation/2_animation.html" width="500px" height="500px"></iframe>
-    <iframe src="./4_animation/4_animation.html" width="500px" height="500px"></iframe>
-    <iframe src="./3_animation/3_animation.html" width="500px" height="500px"></iframe>
+    <iframe src="./1_animation/animation.html" width="520.6px" height="520.6px"></iframe>
+    <iframe src="./2_animation/animation.html" width="520.6px" height="520.6px"></iframe>
+    <iframe src="./3_animation/animation.html" width="520.6px" height="520.6px"></iframe>
 </body>
 
 </html>
