added new animation

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
+    <h1>Restitution</h1>
     <iframe src="./1_animation/animation.html" width="520.6px" height="520.6px"></iframe>
     <iframe src="./2_animation/animation.html" width="520.6px" height="520.6px"></iframe>
     <iframe src="./3_animation/animation.html" width="520.6px" height="520.6px"></iframe>
+    <h1>Wave</h1>
+    <iframe src="./4_animation/animation.html" width="600px" height="600px"></iframe>
+    <iframe src="./5_animation/index.html" width="600px" height="600px"></iframe>
+    <iframe src="./6_animation/index.html" width="800px" height="600px"></iframe>
+    <iframe src="./7_animation/index.html" width="600px" height="600px"></iframe>
 </body>
 
 </html>
